@@ -56,6 +56,8 @@ npc: npc/merchants/gemstone.txt
 npc: npc/merchants/advanced_refiner.txt
 npc: npc/merchants/elemental_trader.txt
 npc: npc/merchants/enchan_arm.txt
+npc: npc/merchants/manuk.txt
+npc: npc/merchants/splendide.txt
 npc: npc/merchants/wander_pet_food.txt
 // Cash Shop
 // See file before enabling, as you may wish to change the
