@@ -38,6 +38,10 @@
 //Used to determine default enemy type of mobs (for use in eachinrange calls)
 #define DEFAULT_ENEMY_TYPE(md) (md->special_state.ai?BL_CHAR:BL_PC|BL_HOM|BL_MER)
 
+//Externals for the status effects. [Epoque]
+extern const int mob_manuk[];
+extern const int mob_splendide[];
+
 //Mob skill states.
 enum MobSkillState {
 	MSS_ANY = -1,
