@@ -1,5 +1,8 @@
 Date		Added
 ======
+2010/06/01
+	* Rev. 14327 Added Splendide and Manuk merchants. [L0ne_W0lf]
+2010/05/30
 	* Rev. 14315 Shop update, and added Wanderer pet food maker NPC. [L0ne_W0lf]
 	- Added Trading merchants, (ninja& gunslinger) to Izlude and Alberta.
 	- Made Brasilis shop names unique, and uncommented.
