@@ -9,6 +9,7 @@
 	13005 Angelic Wing Dagger:	NEED INFO.
 =======================
 2010/06/01
+	* Rev. 14327 Implemented Manuk and Splendide consumable items. [L0ne_W0lf]
 	* Rev. 14325 Fixed Dark Shadow having Nydhoggr's Shadow's MVP exp reward. (Bugreport:4247) [L0ne_W0lf]
 	* Corrected the races for Dark Pinguicula and Ancient Tree. (bugreport:4265)
 2010/05/31
